more updates to star particle distance finding. also, updated the ipython notebook tutorial.

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "# read star and dark matter particles at z = 0\n",
     "\n",
-    "part = gizmo.io.Read.read_snapshots(['star', 'dark'], 'redshift', 0, element_indices=None)"
+    "part = gizmo.io.Read.read_snapshots(['star', 'dark'], 'redshift', 0)"
    ]
   },
   {
@@ -173,7 +173,7 @@
    ],
    "source": [
     "# each particle species is stored as its own dictionary\n",
-    "# 'star' = stars, 'gas' = gas, 'dark' = dark matter, 'dark.2' etc = low-resolution dark matter\n",
+    "# 'star' = stars, 'gas' = gas, 'dark' = dark matter, 'dark.2', 'dark.3', etc = low-resolution dark matter\n",
     "\n",
     "part.keys()"
    ]
@@ -338,9 +338,9 @@
     }
    ],
    "source": [
-    "# formation times of star particles (age of Universe when star formed) [Gyr]\n",
+    "# formation scale-factors of star particles\n",
     "\n",
-    "part['star']['form.time']"
+    "part['star']['form.scalefactor']"
    ]
   },
   {
@@ -363,9 +363,22 @@
     }
    ],
    "source": [
-    "# use .prop() to compute derived quantities, such as age of star particle \n",
-    "# (the lookback time to when it formed)\n",
+    "# use .prop() to compute derived quantities, \n",
+    "# such as the age of the Universe [Gyr] when the star particle formed\n",
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
+    "\n",
+    "part['star'].prop('form.time')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# similarly, get the age of a star particle (the lookback time to when it formed)\n",
     "\n",
     "part['star'].prop('age')"
    ]
@@ -408,8 +421,10 @@
     }
    ],
    "source": [
-    "# 'metallicities' are stored as the mass fraction of each element\n",
-    "# they all are contained in a particle_number x element_number array\n",
+    "# 'metallicities' are stored as mass fractions\n",
+    "# one value for each element, in a particle_number x element_number array\n",
+    "# the first value is the mass fraction of all metals (everything not H, He)\n",
+    "# then He, C, N, O, etc\n",
     "\n",
     "part['star']['massfraction']"
    ]
@@ -435,9 +450,9 @@
    "source": [
     "# get individual elements by their index\n",
     "\n",
-    "# total metals = 0\n",
+    "# total metal mass fraction (everything not H, He) is index 0\n",
     "print(part['star']['massfraction'][:, 0])\n",
-    "# iron = 10\n",
+    "# iron is index 10\n",
     "print(part['star']['massfraction'][:, 10])"
    ]
   },
@@ -465,6 +480,7 @@
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
     "\n",
     "print(part['star'].prop('massfraction.metals'))\n",
+    "print(part['star'].prop('massfraction.carbon'))\n",
     "print(part['star'].prop('massfraction.iron'))"
    ]
   },
@@ -516,7 +532,7 @@
    "source": [
     "# also can use .prop() to compute simple arithmetic combinations\n",
     "# such as [Mg/Fe]\n",
-    "part['star'].prop('metallicity.magnesium - metallicity.iron')"
+    "part['star'].prop('metallicity.mg - metallicity.fe')"
    ]
   },
   {
@@ -733,7 +749,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# for example, if you want to compute the distance of star particles along the major and minor axis of the stellar disk\n",
+    "# here, radius_major is the radius (positive definite) [kpc physical] along the major axis wrt to the center position in the catalog\n",
+    "# radius_minor is the (signed) vertical height [kpc physical] wrt the disk\n",
+    "# axis_distance_max defines the maximum 3-D radius to use in determining the principal axes of the galaxy\n",
+    "# for a MW-mass galaxy, use ~10-20 [kpc]\n",
+    "\n",
+    "radius_major, radius_minor = ut.particle.get_distances_along_principal_axes(part, 'star', '2d', axis_distance_max=15)"
+   ]
   }
  ],
  "metadata": {
