minor updates to io. changed name of notebook tutorial to gizmo_tutorial

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, move within a simulation directory, where you should see the directory 'output/' that contains snapshot files, and a file 'snapshot_times.txt' that lists all snapshot scale-factors/redshifts/times in the simulation and their corresponding file index number."
+    "First, move within a simulation directory, which contains the directory 'output/' that contains snapshot files, and a file 'snapshot_times.txt' that lists all snapshot scale-factors/redshifts/times in the simulation and their corresponding file index number."
    ]
   },
   {
@@ -16,21 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#import gizmo_analysis as gizmo\n",
-    "import gizmo  # I happen to save 'gizmo_analysis' directory as 'gizmo'. Do as you prefer.\n",
+    "import gizmo  # I happen to save my 'gizmo_analysis' directory as 'gizmo', but do as you prefer.\n",
     "\n",
     "import utilities as ut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
        "<module 'gizmo.gizmo_io' from '/Users/awetzel/work/research/analysis/gizmo/gizmo_io.py'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
    "source": [
     "# alternately, read all particle species at z = 0\n",
     "\n",
-    "part = gizmo.io.Read.read_snapshot('all', 'redshift', 0, element_indices=None)"
+    "part = gizmo.io.Read.read_snapshots('all', 'redshift', 0, element_indices=None)"
    ]
   },
   {
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "# 3-D positions of star particles (particle.number x dimension.number array) [Mpc comoving]\n",
+    "# 3-D position of star particles (particle.number x dimension.number array) [Mpc comoving]\n",
     "\n",
     "part['star']['position']"
    ]
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "# 3-D velocities of star particles (particle_number x dimension_number array) [km/s]\n",
+    "# 3-D velocity of star particles (particle_number x dimension_number array) [km/s physical]\n",
     "\n",
     "part['star']['velocity']"
    ]
@@ -313,7 +313,7 @@
     }
    ],
    "source": [
-    "# masses of star particles [M_sun]\n",
+    "# mass of star particles [M_sun]\n",
     "\n",
     "part['star']['mass']"
    ]
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "# formation scale-factors of star particles\n",
+    "# formation scale-factor of star particles\n",
     "\n",
     "part['star']['form.scalefactor']"
    ]
@@ -363,8 +363,8 @@
     }
    ],
    "source": [
-    "# use .prop() to compute derived quantities, \n",
-    "# such as the age of the Universe [Gyr] when the star particle formed\n",
+    "# use .prop() to compute derived quantities,\n",
+    "# such as the age of the Universe [Gyr] when a star particle formed\n",
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
     "\n",
     "part['star'].prop('form.time')"
@@ -378,7 +378,7 @@
    },
    "outputs": [],
    "source": [
-    "# similarly, get the age of a star particle (the lookback time to when it formed)\n",
+    "# similarly, get the age of a star particle (the lookback time to when it formed) [Gyr]\n",
     "\n",
     "part['star'].prop('age')"
    ]
@@ -421,7 +421,7 @@
     }
    ],
    "source": [
-    "# 'metallicities' are stored as mass fractions\n",
+    "# 'metallicities' are stored as *mass fractions*\n",
     "# one value for each element, in a particle_number x element_number array\n",
     "# the first value is the mass fraction of all metals (everything not H, He)\n",
     "# then He, C, N, O, etc\n",
@@ -452,6 +452,7 @@
     "\n",
     "# total metal mass fraction (everything not H, He) is index 0\n",
     "print(part['star']['massfraction'][:, 0])\n",
+    "\n",
     "# iron is index 10\n",
     "print(part['star']['massfraction'][:, 10])"
    ]
@@ -475,7 +476,7 @@
     }
    ],
    "source": [
-    "# alternately use .prop() to compute derived quantities, \n",
+    "# alternately use .prop() to compute derived quantities,\n",
     "# including calling elements by their name\n",
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
     "\n",
@@ -530,8 +531,8 @@
     }
    ],
    "source": [
-    "# also can use .prop() to compute simple arithmetic combinations\n",
-    "# such as [Mg/Fe]\n",
+    "# also can use .prop() to compute simple arithmetic combinations, such as [Mg/Fe]\n",
+    "\n",
     "part['star'].prop('metallicity.mg - metallicity.fe')"
    ]
   },
@@ -723,7 +724,7 @@
     }
    ],
    "source": [
-    "# position [kpc comoving] and velocity [km/s] of the center of the host galaxy\n",
+    "# position [kpc comoving] and velocity [km/s physical] of the center of the host galaxy\n",
     "# this was computed during read in, using ut.particle.get_center_position() and ut.particle.get_center_velocity()\n",
     "# functions in gizmo.analysis use these values in computing profiles\n",
     "\n",
@@ -750,7 +751,7 @@
    },
    "outputs": [],
    "source": [
-    "# for example, if you want to compute the distance of star particles along the major and minor axis of the stellar disk\n",
+    "# for example, this computes the distance of star particles along the major and minor axis of the stellar disk\n",
     "# here, radius_major is the radius (positive definite) [kpc physical] along the major axis wrt to the center position in the catalog\n",
     "# radius_minor is the (signed) vertical height [kpc physical] wrt the disk\n",
     "# axis_distance_max defines the maximum 3-D radius to use in determining the principal axes of the galaxy\n",
