updated variable names and documentation throughout, for clarity, and to streamline workflow.
note: some input variable names changed in gizmo_io, so might have to update your scripts.
notably, in gizmo_io.Read.read_snapshots(), changed:

snapshot_number_kind -> snapshot_value_kind
snapshot_numbers -> snapshot_values
property_names -> properties

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "First, move within a simulation directory, which contains the directory 'output/' that contains snapshot files, and a file 'snapshot_times.txt' that lists all snapshot scale-factors/redshifts/times in the simulation and their corresponding file index number."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Ensure that gizmo_analysis and utilities directories are in your python path, then..."
    ]
@@ -24,9 +18,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -39,11 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# you can access the files as named or use the aliases in __init__.py to keep it shorter \n",
@@ -55,10 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# read particle data"
    ]
@@ -66,11 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# read star and dark matter particles at z = 0\n",
@@ -81,11 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# alternately, read all particle species at z = 0\n",
@@ -96,11 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# each particle species is stored as its own dictionary\n",
@@ -112,11 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# properties of star particles are stored as dictionary\n",
@@ -127,11 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# properties of dark matter particles are stored as dictionary\n",
@@ -141,10 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# particle properties"
    ]
@@ -152,11 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D position of star particles (particle.number x dimension.number array) [Mpc comoving]\n",
@@ -167,11 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D velocity of star particles (particle_number x dimension_number array) [km/s physical]\n",
@@ -182,11 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# mass of star particles [M_sun]\n",
@@ -197,11 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# formation scale-factor of star particles\n",
@@ -212,11 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use .prop() to compute derived quantities,\n",
@@ -229,11 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# similarly, get the age of a star particle (the lookback time to when it formed) [Gyr]\n",
@@ -243,10 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# metallicities"
    ]
@@ -254,11 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 'metallicities' are stored in the catalog as *mass fractions*\n",
@@ -272,11 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get individual elements by their index\n",
@@ -291,11 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# alternately use .prop() to compute derived quantities,\n",
@@ -310,15 +233,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# also use .prop() to compute metallicity [Z/H]\n",
-    "# for example, iron metallicity [Fe/H] := \n",
+    "# for example, iron metallicity [Fe/H] :=\n",
     "#   log10((mass_iron / mass_hydrogen)_particle / (mass_iron / mass_hydrogen)_sun)\n",
     "\n",
     "print(part['star'].prop('metallicity.total'))\n",
@@ -328,11 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# also use .prop() to compute simple arithmetic combinations, such as [Mg/Fe]\n",
@@ -343,11 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# refer to ut.basic.constants for assumed solar values (and other constants)\n",
@@ -357,10 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# additional information stored in sub-dictionaries"
    ]
@@ -368,11 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary of useful information about the simulation\n",
@@ -383,11 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary of information about this snapshot's index, scale-factor, redshift, time, lookback-time\n",
@@ -398,11 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dictionary of arrays about *all* snapshots that were saved for the simulation\n",
@@ -414,11 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# position [kpc comoving] and velocity [km/s physical] of the center of the host galaxy\n",
@@ -431,10 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "See gizmo.analysis for examples of high-level analysis, including plotting these data.\n",
     "\n",
@@ -453,9 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# can compute and assign principal axes (moment of inertia tensor) of stars during read in as below\n",
@@ -466,9 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# moment of inertia tensor is stored similar to center_position\n",
@@ -479,9 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# now can compute different types of distances of star particles from center of main galaxy\n",
@@ -493,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compute 3-D distances along the principal (major, intermediate, minor) axes\n",
@@ -506,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compute 2-D distances along the major axes (major + intermediate) and minor axis\n",
@@ -520,30 +399,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# particle tracking"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "For some simulations, I generated pre-compiled HDF5 files to help with particle tracking. These are stored in the directory 'track/' (if present). The code that generates and reads these files is in gizmo_track.py."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "star\\_indices\\_\\*.hdf5 files store, for each star particles at z = 0, a pointer to where it was in the catalog at each previous snapshot (replace * with snapshot index). This makes it easy to quickly get the properties of a given star particle at any previous snapshot. These pointers are stored in an HDF5 file, one for each previous snapshot."
    ]
@@ -551,11 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# first, read catalog of star particles at z = 0\n",
@@ -566,11 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# say that you want to find out what they were doing at z = 1\n",
@@ -582,11 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the function within gizmo_track.py to read star index pointers associated with the catalog z = 1\n",
@@ -597,11 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pointers are stored via numpy array appended to particle dictionary at the relevant snapshot\n",
@@ -614,9 +468,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -628,11 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# their positions at z = 0\n",
@@ -643,14 +491,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# now get their indices in the catalog at z = 1\n",
+    "# get their indices in the catalog at z = 1\n",
     "\n",
     "indices_at_z1 = part_at_z1.index_pointers[indices_at_z0]\n",
     "print(indices_at_z1)"
@@ -659,24 +503,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# now easily get any property of interest at z = 1, for example, positions\n",
+    "# now you easily can get any property of interest at z = 1, for example, positions\n",
     "\n",
     "part_at_z1['star']['position'][indices_at_z1]    "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Another useful file: star\\_form\\_host\\_distance\\_600.hdf5 stores, for each star particle at z = 0, its distance at the first snapshot after it formed (formation distance) wrt to the main host galaxy, in kpc physical. This file includes both total (scalar) distance and full 3-D vector distance."
    ]
@@ -684,11 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the function within gizmo_track.py to read this file and assign values directly to the catalog at z = 0\n",
@@ -699,11 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# total (scalar) distance at formation, wrt host galaxy [kpc physical]\n",
@@ -714,11 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 3-D distance vector at formation, wrt host galaxy [kpc physical]\n",
@@ -734,36 +559,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for a disk galaxy, you may want to combine the major and intermediate axes into an absolute 'radius'\n",
-    "# this function is useful: returns scalar (absolute) radius and (signed) vertical height within the disk\n",
+    "# this function is useful: it returns a 2-D array scalar (absolute) radius and (signed) vertical height within the disk\n",
     "\n",
-    "radius_in_disk, heigh_in_disk = ut.coordinate.get_distances_2d(part_at_z0['star']['form.host.distance.3d'])\n",
-    "print(radius_in_disk, heigh_in_disk)"
+    "distances_2d = ut.coordinate.get_distances_major_minor(part_at_z0['star']['form.host.distance.3d'])\n",
+    "print(distances_2d[:, 0]) # absolute 2-D radius R\n",
+    "print(distances_2d[:, 1]) # signed vertical height Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# these value look more reasonable is restrict to star particles that formed within the host galaxy\n",
+    "\n",
+    "# select particles formed at d = 0 - 8 kpc physical\n",
+    "part_indices = ut.array.get_indices(part_at_z0['star']['form.host.distance'], [0, 8])\n",
+    "\n",
+    "# get current position in the disk\n",
+    "distances_2d = ut.coordinate.get_distances_major_minor(part_at_z0['star']['form.host.distance.3d'][part_indices])\n",
+    "print(distances_2d[:, 0]) # absolute 2-D radius R\n",
+    "print(distances_2d[:, 1]) # signed vertical height Z"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# these value look more reasonable is restrict to star particles that formed within the host galaxy\n",
-    "\n",
-    "pis = ut.array.get_indices(part_at_z0['star']['form.host.distance'], [0, 8])  # 0 - 8 kpc physical\n",
-    "radius_in_disk, heigh_in_disk = ut.coordinate.get_distances_2d(part_at_z0['star']['form.host.distance.3d'][pis])\n",
-    "print(radius_in_disk, heigh_in_disk)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -783,9 +614,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
